tdf#120651 have to sort radiogroup by tab position

Change-Id: I8fcf4c4b186d8292c85babaa90e98396a5fbc71b
Reviewed-on: https://gerrit.libreoffice.org/61883
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>